Update and rename index.html to premier pas en CSS3 & HTML5.html

--- a/premier pas en CSS3 & HTML5.html
+++ b/premier pas en CSS3 & HTML5.html
@@ -8,7 +8,7 @@
   <body>
      <h1>Presentation</h1>
      <p>
-       Bienvenu sur le site de notre music-restaurant-bar. Vous pouvez reservez votre table directement en ligne.
+       Bienvenu sur <b>le site </b> de notre music-restaurant-bar. Vous pouvez reservez votre table directement en ligne.
      </p>
   </body>
  </html>
